[package]
name = "fimafeng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.0"
anyhow = "*"
threadpool = "1.8.1"
structopt = "0.3.25"
lazy_static = "1.4.0"
chrono = "0.4.19"
tinytemplate = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.23"
rustls = "0.20.2"
rustls-pemfile = "0.2.1"
